# wazzicode-unity

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  bootstrap.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.github/workflows/: desktop-release.yml
.planning/: GSD_DECISIONS.md  GSD_PHASES.md  GSD_PLAN.md  GSD_STATUS.md  GSD_VERIFY.md  ROADMAP.md
apps/cli/: package.json
apps/cli/src/: index.ts  options.ts
apps/desktop/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/scripts/: bundle-uvibe.mjs  fetch-node-sidecar.mjs  fetch-whisper.mjs
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.bundle.conf.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/icons/android/values/: ic_launcher_background.xml
apps/desktop/src-tauri/src/: bridge.rs  claudeauth.rs  codexauth.rs  error.rs  execution.rs  gitutil.rs  lib.rs  main.rs  mcpconfig.rs  pathutil.rs  proc.rs  secrets.rs  state.rs
apps/desktop/src-tauri/src/agent/: backend.rs  codex.rs  flags.rs  mod.rs  options.rs  session.rs  spawn.rs
apps/desktop/src-tauri/src/claude/: flags.rs  mod.rs  session.rs  spawn.rs
apps/desktop/src-tauri/src/commands/: agent_options.rs  chat.rs  codex_auth.rs  loops.rs  mod.rs  onboarding.rs  pairing.rs  project.rs  quick_actions.rs  resources.rs  revert.rs  screenshot.rs  sessions.rs  settings.rs  status.rs
apps/desktop/src-tauri/src/looprunner/: mod.rs  reflect.rs
apps/desktop/src-tauri/src/pairing/: mod.rs  parse.rs
apps/desktop/src-tauri/src/store/: mod.rs  settings.rs
docs/: ARCHITECTURE.md  DEVELOPMENT_WORKFLOW.md  GSD_AUTOMATION.md  MCP_TOOLS.md  PROJECT_BRAIN.md  SAFETY_MODEL.md  TROUBLESHOOTING.md  UNITY_MANUAL_TEST_CHECKLIST.md  UNITY_PACKAGE.md
examples/sample-mcp-config/: README.md  claude_code.json
examples/sample-project-brain/: README.md  claude_context.md  config.json  conventions.md  project_brain.json  project_brain.md
tests/: brain.test.ts  bridge-client.test.ts  cli.test.ts  core.test.ts  mcp.test.ts  reliability.test.ts  safety.test.ts  unity-qa-tools.test.ts
unity/UnityVibeOS/: CHANGELOG.md  README.md  package.json
unity/UnityVibeOS/Editor/: AnimatorBridge.cs  AssetGraph.cs  AssetMutators.cs  AutoSaveGuard.cs  BackgroundKeepAlive.cs  BackgroundPower.cs  BridgeParams.cs  BridgeRouter.cs  BridgeServer.cs  CodeExecutor.cs  CompileWatcher.cs  ConsoleCapture.cs  EditorCompat.cs  EditorStateMirror.cs  InputSimulator.cs  MainThreadDispatcher.cs  MenuBridge.cs  (+17 more)
(+122 files in other folders)
